--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,7 @@
 }
 
 .container{
-    background-color: gray;
+    background: linear-gradient(white, gray, black);
     height: 100vh;
 }
 /* Background */
@@ -41,7 +41,6 @@ header{
     position: absolute;
     top: 330px;
     margin-left: 50px;
-    background-color: gray;
     height: 300px;
 }
 
@@ -194,13 +193,74 @@ span img{
     cursor: pointer;
 }
 
+.loginGoogle{
+    display: inline-block;
+    margin-right: 100px;
+}
 
+.loginGoogle button{
+    width: 130px;
+    border-radius: 50px;
+    padding: 5px;
+    border: none;
+    outline: none;
+    padding-top: 7px;
+    box-shadow: 0 5px 20px gray;
+    transition: .5s;
+}
 
+.loginGoogle button:hover{
+    transform: scale(1.05);
+    background-color: white;
+    cursor: pointer;
+}
 
+.loginGoogle span{
+    position: absolute;
+    right: 30px;
+    bottom: 7px;
+    font-size: 16px;
+    font-weight: bolder;
+    color: var(--corCinza);
+}
 
+.loginGoogle button img{
+    margin-right: 50px;
+}
 
+.loginLinkedin{
+    display: inline-block;
+}
 
+.loginLinkedin button{
+    width: 130px;
+    border-radius: 50px;
+    padding: 5px;
+    border: none;
+    outline: none;
+    padding-top: 7px;
+    box-shadow: 0 5px 20px gray;
+    transition: .5s;
+}
 
+.loginLinkedin span{
+    position: absolute;
+    right: 30px;
+    bottom: 7px;
+    font-size: 16px;
+    font-weight: bolder;
+    color: var(--corCinza);
+}
+
+.loginLinkedin button img{
+    margin-right: 50px;
+}
+
+.loginLinkedin button:hover{
+    transform: scale(1.05);
+    background-color: white;
+    cursor: pointer;
+}
 
 /* Aside */
 aside{
